V2.0.8 (December 31st, 2018):
▔▔▔▔▔▔▔▔▔▔▔
App:
 • UPDATED: UI refinements
 • UPDATED: Bug fixes
 • UPDATED: Mover musicprovider check to the app to elimate 50X errors and unnecessary calls by the devices
 • FIXED: Rename devices setting is no longer ignored and works correctly

Device:
 • UPDATED: Bug fixes
 • ADDED: New Commands
    Calendar Actions:
    • playCalendarToday()
    • playCalendarTomorrow()
    • playCalendarNext()

    New TTS Actions:
    • playJoke()
    • playFunFact()

    Canned TTS Responses:
    • playWelcomeHome()
    • play()

    New Device Control Actions:
    • stopAllDevices() - (Stops all echos devices)(ONLY Send to one device)

    Send Announcements:
    • playAnnouncement()
    • playAnnouncementAll() - (To All Echo Devices)(Only send to one device)

    Send Alexa App Notifications:
    • sendAlexaAppNotification() - (Sends Push message to Alexa Mobile App)

V2.0.7 (December 18th, 2018):
▔▔▔▔▔▔▔▔▔▔▔
App:
 • UPDATED: Updated the cookie validation and notifification logic
 • UPDATED: Bug fixes

Device:
 • UPDATED: Updated the cookie validation and notifification logic
 • UPDATED: Bug fixes

V2.0.5 (December 5th, 2018):
▔▔▔▔▔▔▔▔▔▔▔
App:
 • UPDATED: Increased Full Device Polling from every 15 to every 10 minutes
 • UPDATED: Device Style table is now remotely updatable via the appData.json file used for version info (v2.0.4).

Device:
 • ADDED: Refresh now sends triggers the smartapp to refresh the device list.
 • ADDED: Devices prevent any speech while DoNotDisturb is enabled.
 • ADDED: Devices now prevent commands while device is marked as offline. (Offline Status updates every 10 minutes)
 • UPDATED: setVolumeSpeakAndRestore() now supports an optional 3rd parameter for the restore volume.  If it's not sent it will just use the old volume.
 • UPDATED: Debug Logging data is more detailed for troubleshooting.
 • FIXED: DoNotDisturb Status has been broken since v2 release. It's now fixed.

Server (v2.0.2):